<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/historial" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/cerrar_sesi_n" />
    </group>

</menu>
