<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="180dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_tu_contraseña"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/border"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</LinearLayout>
