<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:maxWidth="180dp"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/textView_main_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_logo"
                android:layout_marginTop="45dp"
                android:text="@string/Inicio"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_main_head"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="66dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>
